# knowledge_extraction

./: .dockerignore  .env.example  .gitignore  .gitmodules  AGENTS.md  ALEMBIC_SETUP_COMPLETE.md  BREAKTHROUGH.md  CRAWL_PIPELINE_REVIEW.md  DEPLOYMENT_ANALYSIS.md  DOCKER_TEST.md  Dockerfile  Dockerfile.camoufox  Dockerfile.playwright  Dockerfile.proxy  FACTAPI_AGENT_INSTRUCTIONS.md  HANDOFF.md  HTTP_ERROR_HANDLING_PLAN.md  MIGRATIONS_QUICKREF.md  PIPELINE_REVIEW.md  PORTAINER_SETUP.md  TRANSPARENT-PROXY-STATUS.md  alembic.ini  build-and-push.sh  check_alembic_version.sh  check_db_schema.sh  docker-compose.debug.yml  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  docker_quick_test.sh  endpoint_scrape_review.md  init.sql  migrate.sh  pyproject.toml  requirements-camoufox.txt  requirements.txt  stack.env  test_docker.sh
.claude/: settings.json  settings.local.json
alembic/: env.py
analysis/: locations_investigation.json
cheatsheets/: cheatsheet_docker.md  cheatsheet_git.md  cheatsheet_pytest.md  cheatsheet_venv.md
deployment_logs/: _scristill-stack-firecrawl-api-1_logs.txt  _scristill-stack-firecrawl-db-1_logs.txt  _scristill-stack-pipeline-1_logs.txt  _scristill-stack-rabbitmq-1_logs.txt  _scristill-stack-redis-1_logs.txt
docker/: playwright-entrypoint.sh
docs/: ARCHITECTURE-camoufox.md  ARCHITECTURE.md  BUG_crawl_batch_scrape_stuck.md  DEPLOYMENT.md  EXTRACTION_ARCHITECTURE_GAP.md  FINDINGS-transparent-proxy.md  IMPLEMENTATION-READINESS.md  IMPLEMENTATION_PLAN_v2.md  IMPLEMENTATION_PLAN_v2_CODE.md  ISSUE_VERIFICATION.md  MIGRATIONS.md  (+127 more)
(+445 files in other folders)
